제목에 clone페이지라고 명시, 버튼 hover시 cursor가 pointer로 변하도록 수정

--- a/veamcamp/pricetable/style.css
+++ b/veamcamp/pricetable/style.css
@@ -89,6 +89,7 @@ img.list-item-icon {
   display: block;
   padding: 20px 0;
   transition: all .4s;
+  cursor: pointer;
 }
 .button:hover {
   background-color: darkblue;
